[gd_scene load_steps=6 format=3 uid="uid://cm8nv7v0apls3"]

[ext_resource type="Script" uid="uid://bx5q8iwiu37d2" path="res://src/objects/grabbables/GrappleHook.gd" id="1"]

[sub_resource type="BoxShape3D" id="BoxShape3D_grapple"]
size = Vector3(0.075, 0.025, 0.2)

[sub_resource type="BoxMesh" id="1"]
resource_local_to_scene = true
size = Vector3(0.15, 0.05, 0.4)

[sub_resource type="SphereMesh" id="SphereMesh_hitmarker"]
radius = 0.06
height = 0.12
radial_segments = 8
rings = 4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hitmarker"]
transparency = 1
albedo_color = Color(1, 0.392157, 0.196078, 1)
emission_enabled = true
emission = Color(1, 0.392157, 0.196078, 1)

[node name="GrappleHook" type="RigidBody3D" groups=["grabbable"]]
mass = 0.5
script = ExtResource("1")
grab_mode = 1
hitmarker_radius = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_grapple")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("1")

[node name="HitTargetMarker" type="Node3D" parent="."]

[node name="MarkerMesh" type="MeshInstance3D" parent="HitTargetMarker"]
visible = false
mesh = SubResource("SphereMesh_hitmarker")
surface_material_override/0 = SubResource("StandardMaterial3D_hitmarker")
